@@ -1,0 +1,123 @@
+﻿-- Authors: Silmano
+-- Localization file for Spanish version of SmartRes2
+
+local debug = false
+--[===[@debug@
+debug = true
+--@end-debug@]===]
+
+local L = LibStub("AceLocale-3.0"):NewLocale("SmartRes2", "deDE", false, debug) -- this is not the default language
+
+if L then
+	L["About"] = "Acerca de"
+	L["About the author and SmartRes2"] = "Acerca del autor y SmartRes2"
+	L["All dead units are being ressed."] = "Todas las unidades muertas estan siendo resucitadas"
+	L["Anchor"] = "Anchor" -- Requires localization
+	L["And you thought the Scourge looked bad. In about 10 seconds, %s knows %s will want a comb, some soap, and a mirror."] = "Y pensabas que La Plaga estaba mal vista. En unos 10 segundos, %s sabe que %s querr\195\161 un cepillo, algo de jab\195\179n y un espejo."
+	L["Auto Res Key"] = "Tecla AutoResucitar"
+	L["Background Colour"] = "Color de Fondo"
+	L["Bar Colour"] = "Color de la Barra"
+	L["Border"] = "Borde"
+	L["Change the horizontal direction of the res bars"] = "Change the horizontal direction of the res bars" -- Requires localization
+	L["Chat Output"] = "Salida por chat"
+	L["Chat output options"] = "Opciones de salida por chat"
+	L["Chat Output Type"] = "Tipo de salida por chat"
+	L["Class Colours"] = "Colores de clase"
+	L["Credits"] = "Creditos"
+	L["Duplicate Bar Colour"] = "Duplica el color de la barra"
+	L["Duplicate Res Targets"] = "Objetivo a resucitar duplicado"
+	L["Everybody is alive. Congratulations!"] = "Todo el mundo esta vivo. Felicidades!"
+	L["Filthy peon! %s has to resurrect %s!"] = "\194\161Asqueroso pe\195\179n! \194\161%s ha tenido que resucitar a %s!"
+	L["For ressing targets who have not released their ghosts"] = "For ressing targets who have not released their ghosts" -- Requires localization
+	L["FOR THE HORDE! FOR THE ALLIANCE! %s thinks %s should be more concerned about yelling FOR THE LICH KING! and prevents that from happening."] = "\194\161POR LA HORDA! \194\161POR LA ALIANZA! %s piensa que %s deber\195\173a estar m\195\161s concernido en gritar \194\161POR EL REY EX\195\129NIME! y le previene de que ocurra."
+	L["Gives you the pointer to click on corpses"] = "Gives you the pointer to click on corpses" -- Requires localization
+	L["Group"] = "Group" -- Requires localization
+	L["Grow Upwards"] = "Crecer hacia arriba"
+	L["Guild"] = "Guild" -- Requires localization
+	L["Horizontal Direction"] = "Direcci\195\179n Horizontal"
+	L["In a world of resurrection spells, why are NPC deaths permanent? It doesn't matter, since %s is making sure %s's death isn't permanent."] = "En un mundo de hechizos de resurecci\195\179n, \194\191por qu\195\169 las muertes de PNJs son permanentes? No importa, dado que %s se esta asegurando que la muerte de %s no sea permanente."
+	L["is resurrecting "] = "esta resucitando"
+	L["I would personally like to thank Jerry on the wowace forums for coding the new, smarter, resurrection function."] = "Quiero agradecer personalmente a Jerry en los foros de wowace por codificar la nueva e inteligente funci\195\179n de resurecci\195\179n."
+	L["Just to be silly, %s tickles %s until they get back up."] = "Solo para hacer el tonto, %s hace cosquillas a %s hasta que se levanta de nuevo."
+	L["Key Bindings"] = "Mapeo de teclas"
+	L["Left click to lock/unlock the res bars. Right click for configuration."] = "Click izquierdo para fijar o no las barras de resurecci\195\179n. Click derecho para configuraci\195\179n."
+	L["Left to Right"] = "Left to Right" -- Requires localization
+	L["Make the res bars grow up instead of down"] = "Hace que las barras de resurecci\195\179n crezcan hacia arriba en vez de hacia abajo"
+	L["Manual Target Key"] = "Tecla objetivo manual"
+	L["Massive kudos to Maia, Kyahx, and Poull for the original SmartRes.\
+	SmartRes2 was largely possible because of DathRarhek's LibResComm-1.0 so a big thanks to him."] = "Enormes gracias a Maia, Kyahx y Poull por el SmartRes original.\
+	SmartRes2 ha sido posible debido a DathRarhek's LibResComm-1.0, asi que muchas gracias tio!"
+	L["No fallen heroes! %s needs %s to march forward to victory!"] = "\194\161Ningun heroe caido! \194\161%s necesita a %s para marchar directos a la victoria!"
+	L["Oh. My. God. %s has to breathe life back into %s AGAIN?!?"] = "No. Me. Lo. Creo. %s ha tenido que traer a %s de vuelta a la vida \194\191\194\191OTRA VEZ??"
+	L["Once again, %s pulls %s and their bacon out of the fire."] = "Una vez m\195\161s, %s empuja a %s y a su beicon fuera del fuego."
+	L["Options for the res bars"] = "Opciones para las barras de resurecci\195\179n"
+	L["Party"] = "Party" -- Requires localization
+	L["Pick the colour for collision (duplicate) res bars"] = "Escoje el color para barras de resurecci\195\179n duplicadas"
+	L["Pick the colour for non-collision (not a duplicate) res bar"] = "Escoje el color para barras de resurecci\195\179n no duplicadas"
+	L["Please get SmartRes2 and use the auto res key to never see this whisper again."] = "Por favor, descarga SmartRes2 y utiliza la tecla de auto resurecci\195\179n para no ver este susurro otra vez."
+	L["Prints a message to yourself whom you are ressing"] = "Imprime un mensaje diciendote a quien resucitas"
+	L["Raid"] = "Raid" -- Requires localization
+	L["Random Res Messages"] = "Mensajes de resurecci\195\179n aleatorios"
+	L["Res Bars"] = "Barras de resurecci\195\179n"
+	L["Right to Left"] = "Right to Left" -- Requires localization
+	L["Say"] = "Say" -- Requires localization
+	L["Scale"] = "Escala"
+	L["%s doesn't think %s is immortal, but after this res cast, it is close enough."] = "%s no piensa que %s es inmortal, pero despues de esta resurecci\195\179n, esta bastante cerca."
+	L["%s doesn't want the Lich King to get another soldier, so is bringing %s back to life."] = "%s no quiere que el Rey Ex\195\161nime tenga otro soldado por lo que esta trayendo a %s de vuelta a la vida."
+	L["Select the texture for the res bars"] = "Selecciona la textura para las barras de resurecci\195\179n"
+	L["Self Notification"] = "Notificaci\195\179n propia"
+	L["Set the background colour for the res bars"] = "Fija el color de fondo para las barras de resurecci\195\179n"
+	L["Set the border for the res bars"] = "Fija el borde de las barras de resurecci\195\179n"
+	L["Set the keybindings"] = "Fija el mapeo de teclas"
+	L["Set the scale for the res bars"] = "Fija el tama\195\177o de las barras de resurecci\195\179n"
+	L["%s grabs a stick. A-ha! %s was only temporarily dead."] = "%s coge un palo. Aj\195\161! %s estaba solo temporalmente muerto."
+	L["%s has to wake %s from eternal slumber."] = "%s tiene que despertar a %s de un sue\195\177o eterno."
+	L["Show Icon"] = "Mostrar Icono"
+	L["Show or hide the icon for res spells"] = "Mostrar o ocultar el icono para los hechizos de resurecci\195\179n"
+	L["Show the test bars"] = "Motrar las barras de prueba"
+	L["%s is bringing %s back to life!"] = "\194\161%s esta trayendo a %s de vuelta a la vida!"
+	L["%s is ending %s's dirt nap."] = "%s esta acabando la sienta en el fango de %s"
+	L["%s is ressing %s"] = "%s esta resucitando a %s"
+	L["%s knew %s couldn't stay out of the fire. *Sigh*"] = "%s sabia que %s no podr\195\173a estar fuera del fuego. *Snif*"
+	L["%s knows %s is faking. It was only a flesh wound!"] = "%s sabe que %s esta fingiendo. \194\161Ha sido solo una herida superficial!"
+	L["%s knows that %s dying was just an excuse to see another silly random res message."] = "%s sabe que la muerte de %s es otra excusa para ver un mensaje de resurecci\195\179n aleatorio."
+	L["Sleeping on the job? %s is disappointed in %s."] = "\194\191Durmiendo en el trabajo? %s esta decepcionado con %s"
+	L["SmartRes2 Credits"] = "Creditos SmartRes2"
+	L["SmartRes2 would like you to know that %s is already being ressed by %s. "] = "SmartRes2 quiere que sepas que %s esta actualmente siendo resucitado por %s"
+	L["Somewhere, the Lich King is laughing at %s, because he knows %s will just die again eventually. More meat for the grinder!!"] = "En algun lugar, el Rey Ex\195\161nime se esta riendo de %s, porque sabe que %s volver\195\161 a morir en breve. \194\161\194\161M\195\161s carne para la picadora!!"
+	L["%s performs a series of lewd acts on %s's still warm corpse. Ew."] = "%s realiza una serie de actos extra\195\177os en el cuerpo aun caliente de %s. Aj!"
+	L["%s prays over the corpse of %s, and a miracle happens!"] = "%s reza sobre el cuerpo de %s, \194\161y ocurre un milagro!"
+	L["%s prods %s with a stick. A-ha! %s was only temporarily dead."] = "%s pincha a %s con un palo. Aj\195\161! %s estaba temporalmente muerto."
+	L["%s refuses to accept blame for %s's death, but kindly undoes the damage."] = "%s niega aceptar la culpa por la muerte de %s, pero generosamente deshace el da\195\177o."
+	L["%s requires the library '%s' to be available."] = "%s requires the library '%s' to be available." -- Requires localization
+	L["%s thinks %s should work on their Dodge skill."] = "%s piensa que %s deber\195\173a practicar en su habilidad de esquivar."
+	L["%s wonders about these stupid res messages. %s should just be happy to be alive."] = "%s se pregunta acerca de estos estupidos mensajes de resurecci\195\179n. %s deber\195\173a estar contento de estar vivo."
+	L["Test Bars"] = "Barras de Prueba"
+	L["Texture"] = "Textura"
+	L["There are no bodies in range to res."] = "No hay cuerpos en rango para resucitar"
+	L["Think that was bad? %s proudly shows %s the scar tissue caused by Hogger."] = "\194\191Piensas que estuvo mal? %s muestra orgulloso la cicatriz que le hizo Hogger a %s"
+	L["Think that was bad? %s proudly shows %s the scar tissue caused by Ragnaros."] = "\194\191Piensas que fue mal? %s muestra orgulloso la cicatriz que Ragnaros le hizo a %s."
+	L["Toggles the anchor for the res bars so you can move them"] = "Activa/Desactiva el ancla de las barras de resurecci\195\179n para poder moverlas"
+	L["Toggle whether you want to whisper a resser who is ressing a\
+	target of another resser's spell.\
+	Could get very spammy.\
+	Default off"] = "Activa/Desactiva si quieres whispear a la persona que esta resucitando\
+	a alguien que ya esta siendo resucitado por otro.\
+	Puede producir bastante spam.\
+	Por defecto desactivado."
+	L["Turn random res messages on or keep the same message.\
+	Default is off"] = "Activa mensajes de resurecci\195\179n aleatorios o mantiene el mismo mensaje.\
+	Por defecto desactivado."
+	L["Unknown"] = "Unknown" -- Requires localization
+	L["Use class colours for the target on the res bars"] = "Usa los colores de clase para el objetivo en las barras de resurecci\195\179n"
+	L["Where to print the res message.\
+	Raid, Party, Say, Yell, Guild, or None.\
+	Default is None"] = "Where to print the res message.\
+	Raid, Party, Say, Yell, Guild, or None.\
+	Default is None" -- Requires localization
+	L["Yell"] = "Yell" -- Requires localization
+	L["You are not in a group."] = "No estas en un grupo."
+	L["You are ressing %s"] = "Estas resucitando a %s"
+	L["You cannot cast res spells."] = "No puedes castear hechizos de resurecci\195\179n"
+	L["You don't have enough Mana to cast a res spell."] = "No tienes suficiente man\195\161 para castear un hechizo de resurecci\195\179n"
+end
