@@ -25,3 +25,4 @@ r31 oneforeignshore and I (mostly him) fixed LOTS of issues. including localizat
 r32 most of the options working. Test bars still non functional. need to test in a party or raid
 r33 - r 35 Phanx changes, but based on old codebase
 r36 new codebase, updated localizations
+r37 added esES and esMX localizations
